scrollbar error fix, h1-6 css overflow hide

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,6 +12,12 @@ html, body {
     background-color: #000;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    margin-top: 0;
+    margin-bottom: 0;
+    overflow: hidden;
+  }
+
 .course-item img {
 transition: transform 0.3s ease;
 }
